   circles on and off at run-time.
 + Added distance fading agro circles.. The intensity of the
   R channel in the RGB color now changes depending upon your
   distance from the mob.
 + Added a GUI element in the preferences to toggle agro
   distance fading.

Bug fixes (CapnBry):
 + Changed the range circles to be dark grey, so that they
   actually show up now.


Andon (07/Feb/02)
------------------

Documentation:
 + Fixed a lingering issue with the CVS commandline listed in
   INSTALL


Andon (07/Feb/02)
------------------

Additions:
 + Added preliminary support for NVidia GLX specific optimizations
   (expect to see this support utilized in the near future!)
 + As a result of the abovementioned addition, Excalibur now uses
   a different method for detecting DRI support on your machine,
   the new method is much more intelligent and verbose.

Documentation:
 + Fixed a few issues where some portions of the Excalibur docs
   were violating the GPL..
 + Fixed a few typos made in the INSTALL docs.
 + Fixed a few invalid claims made in README and INSTALL.
 + Added minimal info for installing Excalibur on Debian UNSTABLE.


Andon (07/Feb/02)
------------------

Additions:
 + Removed the lame X/Y/Z / Zone indicator above the spawn
   list, it's been moved to the status bar now!
 + Added a Zone ID --> Zone Name feature, see the status bar
   for an example.

Bug Fixes:
 + Applied CapnBry's patch to fix some map "issues" in Albion.


Andon (07/Feb/02)
------------------

Additions:
 + Added CapnBry's patch for mob agro indicators..
 + Added to his patch, providing a GUI element to toggle them
   on and off at run-time.


Andon (06/Feb/02)
------------------
 BIG NEWS
----------
 + Odin's Eye has been merged into a new Open Source project..

 ** Excalibur is born! **

 Excalibur follows a much different plan of attack than Odin's Eye did.

 Excalibur is designed to be completely Open Source.. We encourage the